--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                 <img src="./assest/linkedin.png" alt="My linkedln profile" 
                 class="icon" onclick="location.href='https://www.linkedin.com/in/srijan-thapa-80040a1ab/'">
                 <img src="./assest/github.png" alt="My Github profile"
-                 class="icon" onclick="location.href='https://github.com'">
+                 class="icon" onclick="location.href='https://github.com/SrijanThapa1'">
 
             </div>
 
