--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta property="og:title" content="Srijan's Portfolio">
+        <meta property="og:type" content="website">
+        <meta propety="og:image" content="./assest/about-me-final.jpeg">
+        <meta property="og:url" content="srijanthapa.netlify.app">
         <link rel="stylesheet" href="style.css">
         <link rel="stylesheet" href="mediaqueries.css">
         <title> My portfolio</title>
