--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <meta property="og:title" content="Srijan's Portfolio">
         <meta property="og:type" content="website">
         <meta propety="og:image" content="./assest/about-me-final.jpeg">
-        <meta property="og:url" content="srijanthapa.netlify.app">
+        <meta property="og:url" content="https://srijanthapa.netlify.app">
         <link rel="stylesheet" href="style.css">
         <link rel="stylesheet" href="mediaqueries.css">
         <title> My portfolio</title>
