--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
         <meta property="og:type" content="website">
         <meta propety="og:image" content="./assest/about-me-final.jpeg">
         <meta property="og:url" content="https://srijanthapa.netlify.app">
-        <meta property="og:description" content=" He is an aspiring Geomatics Engineer with a strong academic record and a passion for technology.">
-        <meta propety="og:locale" content="en_NP">
+        <meta name="og:description" content=" He is an aspiring Geomatics Engineer with a strong academic record and a passion for technology.">
+        <meta name="og:locale" content="en_NP">
 <!--         <meta property="og:site_name" content="Srijan's Website"> -->
         
         <link rel="stylesheet" href="style.css">
